# MicroReactor

./: README.md  README_en.md
components/micro_reactor/: CMakeLists.txt  Kconfig
components/micro_reactor/include/: ur_config.h  ur_core.h
components/micro_reactor/src/: ur_core.c
components/micro_reactor/src/extensions/: ur_trace.c
docs/: api_reference_zh.md  beginner_tutorial_zh.md  framework_evaluation_zh.md  todo.md  tutorial_zh.md
examples/example_advanced/: CMakeLists.txt  main.c
examples/example_basic/main/: main.c
examples/example_multi_entity/main/: main.c
tools/: README.md  crash_analyzer.py  rctl.py  requirements.txt
tools/scope/: __init__.py  reactor_scope.py
tools/studio/: __init__.py  reactor_studio.py
